Attempts to fix horizontal UI slide on mobile/tables

--- a/src/globals.css
+++ b/src/globals.css
@@ -1,3 +1,11 @@
+.aos-all {
+  max-width: 100% !important;
+  width: 100% !important;
+  width: 100vw !important;
+  overflow: hidden;
+  margin: 0;
+}
+
 body {
   font-family: Georgia, Helvetica, sans-serif;
   overflow-x: hidden;
